feedback/build.txt
#############

gcc -Wall -g --std=c99 -DNDEBUG -c command.c
command.c: In function ‘command_parse’:
command.c:46:6: error: ‘foreground’ redeclared as different kind of symbol
 int *foreground = 1;
      ^
command.c:39:39: note: previous definition of ‘foreground’ was here
 char** command_parse(char* line, int* foreground) {
                                       ^
command.c:46:19: warning: initialization makes pointer from integer without a cast [enabled by default]
 int *foreground = 1;
                   ^
command.c:114:6: error: redefinition of ‘spaceCount’
  int spaceCount = 0;
      ^
command.c:45:5: note: previous definition of ‘spaceCount’ was here
 int spaceCount = 0;
     ^
make: *** [command.o] Error 1

##############

post-fix compilation below:

gcc -Wall -g --std=c99 -DNDEBUG -c command.c
gcc -Wall -g --std=c99 -DNDEBUG -o command_test command_test.c command.o
gcc -Wall -g --std=c99 -DNDEBUG -Werror --std=gnu99 -o command_grade command_grade.c command.o command-solution.o
gcc -Wall -g --std=c99 -DNDEBUG -Werror --std=gnu99 -o command_grade_single command_grade_single.c command.o command-solution.o
